--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "lodash": "^4.17.21",
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recoil": "^0.7.7",
     "spotify-web-api-node": "^5.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.7"
   }
 }
